// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-dropdown default 1`] = `
<div
  class="m-dropdown"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
    style="width: 100%; margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-uuid"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Vegetable
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-controls="mDropdown-uuid-controls"
              aria-haspopup="true"
              class="m-dropdown__input"
              id="mDropdown-uuid"
              readonly="readonly"
              type="text"
            />
             
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__arrow__icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-dropdown filterable 1`] = `
<div
  class="m-dropdown m--has-placeholder-icon"
  placeholder-icon-name="m-svg__search"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
    style="width: 100%; margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-uuid"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Animals
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-dropdown__placeholder-icon"
              height="16px"
              width="16px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <input
              aria-controls="mDropdown-uuid-controls"
              aria-haspopup="true"
              class="m-dropdown__input"
              id="mDropdown-uuid"
              type="text"
            />
             
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__arrow__icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-dropdown filterable and placeholder 1`] = `
<div
  class="m-dropdown"
  placeholder-icon-name="m-svg__search"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
    style="width: 100%; margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-uuid"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Animals
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-controls="mDropdown-uuid-controls"
              aria-haspopup="true"
              class="m-dropdown__input"
              id="mDropdown-uuid"
              placeholder="Type to filter"
              type="text"
            />
             
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__arrow__icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-dropdown focus 1`] = `
<div
  class="m-dropdown"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
    style="width: 100%; margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-uuid"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Avengers
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-controls="mDropdown-uuid-controls"
              aria-haspopup="true"
              class="m-dropdown__input"
              id="mDropdown-uuid"
              readonly="readonly"
              type="text"
            />
             
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__arrow__icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-dropdown label-up 1`] = `
<div
  class="m-dropdown"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--is-tag-default"
    style="width: 100%; margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-uuid"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Name
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-controls="mDropdown-uuid-controls"
              aria-haspopup="true"
              class="m-dropdown__input"
              id="mDropdown-uuid"
              placeholder="placeholder"
              readonly="readonly"
              type="text"
            />
             
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__arrow__icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
